{
    "name": "CameraInputActions",
    "maps": [
        {
            "name": "CameraControl",
            "id": "7ce697d1-95b7-4d04-ab9e-a2f032b1247c",
            "actions": [
                {
                    "name": "LockOn",
                    "type": "Button",
                    "id": "213ffe5f-bd14-4c59-b53e-67e71e3619f5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "06ad2384-ae72-44a2-9558-b285e1e7fc50",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Camera",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f8137cf-c32b-4eb8-95b8-a341705e45c4",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Camera",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Camera",
            "bindingGroup": "Camera",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}